# chifleton

./: .gitignore  ARCHITECTURE.md  ASSESSMENT.md  CHANGELOG.md  Dockerfile  LICENSE  METRICS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: dependency-scan.yml  scan.yml
chifleton/: __init__.py  __main__.py
docs/: ASSESSMENT-NODE-UPDATE.md  DESIGN-NODE.md  DESIGN-REMEDIATION-AND-NODE.md  GITHUB-ISSUES-NODE.md  POLICY-COMPLIANCE-MAPPING.md  RELEASE-v0.2.0.md  RISKS-AND-LIMITATIONS.md  SECURE-SUPPLY-CHAIN-GUIDELINES.md
scanner/: __init__.py  __main__.py  cache.py  cli.py  osv_client.py  parser.py  recommendations.py  remediation.py  reporter.py  utils.py
scanner/parsers/: __init__.py  base.py  detect.py  node_parser.py  python_parser.py
scanner/templates/: report.html.jinja
templates/: report.html.jinja
tests/: test_cli.py  test_osv_client.py  test_parser.py  test_reporter.py
tests/fixtures/: package-lock.json  package.json
