[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chifleton"
version = "0.2.1"
description = "Chifleton — lightweight dependency vulnerability scanner using OSV.dev"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jaeha Yoo" }]
keywords = ["security", "vulnerability", "dependencies", "osv", "supply-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "Jinja2>=3.1",
    "tomli>=2.0; python_version < \"3.11\"",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
chifleton = "scanner.cli:main"
auditdeps = "scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*", "chifleton*", "auditdeps*"]

[tool.setuptools.package-data]
scanner = ["templates/*.jinja"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
